[project]
name = "rpc-health-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.2",
    "logging>=0.4.9.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.8.5",
]

[tool.ruff]
line-length = 120
